2010-03-21  Kristian Amlie  <kristian.amlie@nokia.com>

Reviewed by Simon Hausmann.

        Fixed updating the VKB display when inputting into QGraphicsWebView.
        https://bugs.webkit.org/show_bug.cgi?id=36292

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebViewPrivate::_q_updateMicroFocus):
        (QGraphicsWebView::setPage):
        * Api/qgraphicswebview.h:

Canonical link: https://commits.webkit.org/47616@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56322 268f45cc-cd09-0410-ab3c-d52691b4dbfc